--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ footer p {
     background: linear-gradient(to bottom, rgba(193, 5, 255, 0.118), #000000);
     max-width: 432px;
     border-radius: 50px;
+    margin-top: 25px;
 }
 
 .gallery img {
