--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
     margin-top: 20px;
     background-color: transparent;
     text-align: center;
+    cursor: pointer;
+    
 }
 .courier-text {
     font-family: Courier, monospace;
