--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap');
+
 .cedarville-cursive-text {
     font-family: 'Cedarville Cursive', cursive;
     font-weight: 400;
@@ -16,27 +17,6 @@
     text-align: center;
 }
 
-header {
-    background-color: transparent;
-    text-align: center;
-    font-family: 'Bitter', sans-serif;
-    font-weight: 100;
-    padding: 1em;
-    font-size: 10px;
-    background: linear-gradient(to top, rgba(47, 0, 63, 0.627), #ffffff1d);
-    outline: none;
-    max-width: 432px;
-    border-radius: 30px;
-    display: none;
-    h1, p {
-        font-family: 'Cedarville Cursive', cursive;
-        margin: 1px;
-    }
-    h1 {
-        margin-top: 10px;
-    }
-}
-
 body {
     display: flex;
     flex-direction: column;
@@ -49,12 +29,6 @@ body {
     margin-left: 2px;
     margin-top: 2px;
 }   
-header h2 {
-    text-align: center;
-    opacity: .7;
-    margin: 5px;
-    font-family: monospace;
-}
 
 footer {
     background-color: transparent;
@@ -67,18 +41,22 @@ footer {
 footer p {   
     font-size: 6px;
 }
-
-#mute {
+.mute:hover {
+    transform: translateY(-10px);
+    border: 5px solid rgb(150, 9, 216);
+}
+.mute {
     background-image: linear-gradient(to left,  rgb(4, 2, 51), rgba(0, 0, 0, 0.852), rgb(51, 8, 51), rgb(48, 2, 80));
     color: white;
     padding: 10px;
-    border: 30px solid black;
+    border: 5px solid black;
     border-radius: 50px;
     cursor: pointer;
-    margin: 15px;
-    width: 100%;
-    opacity: .75;
     margin: 0;
+    width: 75%;
+    margin-top: 20px;
+    opacity: .9;
+    transition: 700ms;
 }
 
 .gallery {
