--- a/styles.css
+++ b/styles.css
@@ -57,13 +57,13 @@ footer p {
 
 .button1:hover {
     color:#ff0000;
-    transform: scale(1.3);
+    transform: scale(1.1);
 }
 
 .button1 {
     background-image: linear-gradient(to left,  rgba(4, 2, 51, 0.832), rgba(0, 0, 0, 0.852), rgb(51, 8, 51), rgb(48, 2, 80));
     align-self: center;
-    opacity: .9;
+    opacity: .8;
     background-color: #000000;
     color: rgb(242, 245, 232);
     padding: 10px;
@@ -71,9 +71,10 @@ footer p {
     border-radius: 50px;
     cursor: pointer;
     margin: 0;
-    width: 65%;
-    margin-top: 20px;
+    width: 42%;
+    margin: 10px;
     transition: 500ms;
+    flex-direction: row;
 }
 
 .gallery {
