--- a/styles.css
+++ b/styles.css
@@ -82,20 +82,21 @@ footer p {
     background: linear-gradient(to bottom, rgba(193, 5, 255, 0.118), #000000);
     max-width: 432px;
     border-radius: 50px;
-    margin-top: 20px;
+    margin-top: 10px;
     cursor: none;
 }
 
 .gallery img {
     margin: 1em;
-    width: 35%;
-    max-width: 200px;
-    opacity: 0.3;
+    width: 33%;
+    max-width: 100px;
+    opacity: 0.5;
     transition: transform 0.5s ease-in-out;
+    border-radius: 35px;
 }
 
 .gallery img:hover {
-    transform: scale(1.2);
+    transform: translateY(+5px);
     opacity: 1.0;
 }
 
@@ -115,6 +116,50 @@ footer p {
     width: 100%;
     background: linear-gradient(to top, rgba(193, 5, 255, 0.189), #000000);
     border-radius: 35px;
-}   
+}
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; 
+    background-color: black; 
+  }
 
-@media only screen and (max-width: 600px){}
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+.close {
+    position: absolute;
+    top: 20px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+  }   
+
+  @media (max-width: 600px) {
+    .modal-content {
+      width: 100%;
+    }
+    .close {
+      font-size: 30px;
+      top: 10px;
+      right: 15px;
+    }
+  }
